fix: let body overflow to hide toolbar in Firefox Android (#1730)
* fix: let body overflow to hide toolbar in Firefox Android

fix #1729

* fix: scroll body for script list on small screens

--- a/src/common/ui/style/style.css
+++ b/src/common/ui/style/style.css
@@ -55,7 +55,7 @@
 }
 
 body {
-  overflow: hidden; // avoid flash of viewport caused by tooltip
+  // overflow: hidden; // avoid flash of viewport caused by tooltip
   font-size: 1rem;
   background: var(--bg);
   color: var(--fg);
